--- a/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
+++ b/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
@@ -165,7 +165,7 @@
 .Third-Level-2A{
     display: block;
     position: relative;
-    right: 50%;
+    right: 55%;
 }
 .PhotoPos-2A{
     height: 13rem;
@@ -180,5 +180,17 @@
     left: 55.5%;
     margin-top: 5rem;
     margin-bottom: 5rem;
+}
+.name-card{
+    width: 60%;
+}
+.divider{
+    height:1rem;
+    width: 50%;
+}
+
+.btn-css{
+    position: relative;
+    left: 10%;
 }
  }
