--- a/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
+++ b/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
@@ -39,6 +39,16 @@
     position: relative;
     bottom: 2.5rem;
 }
+.btn-css-d{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    position: relative;
+    bottom: 2.5rem;
+}
 .first-level{
     position: relative;
     right: 1rem;
@@ -64,6 +74,12 @@
     position: relative;
     right: 1rem;
 }
+
+.Third-Level-2A{
+    display: flex;
+    position: relative;
+    right: 1rem;
+}
 .DocA{
     position: relative;
     left: 46.5%;
@@ -78,13 +94,40 @@
 .PosDistance1A{
     margin-left: 8rem;
 }
-
-
+.PosDistance1AB{
+    margin-left: 8rem;
+    position: relative;
+    left: 27%;
+}
+.PosDistance1AD{
+    margin-left: 8rem;
+    position: relative;
+    left: 30%;
+}
 .PosDistanceA{
     position: relative;
     left: 29%;
 }
 
+.PosDistanceAF{
+    margin-right:7rem;
+}
+
+.PosDistanceAC{
+    position: relative;
+    left: -10%;
+}
+.btn-css-dAC{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    position: relative;
+    bottom: 2.5rem;
+    left: 9.5%;
+}
 .PosDistance-2{
     margin-left: 4.5rem;
     position: relative;
@@ -136,6 +179,7 @@
     position: relative;
     left: 10%;
     margin-top: 5rem;
+    width: 80%;
     color: #149BFC;
 }
 .first-levelA{
@@ -162,7 +206,27 @@
 .PosDistance1A{
     margin-left: 0rem;
 }
+.PosDistanceAF{
+  margin-left: 0rem;
+  position: relative;
+  left: 40%;
+}
+.PosDistance1AD{
+    margin-left: 0rem;
+    position: relative;
+    left: 0%;
+}
+
+.PosDistance1AB{
+    margin-left: 0rem;
+}
 .Third-Level-2A{
+    display: block;
+    position: relative;
+    right: 55%;
+}
+
+.Third-Level-3A{
     display: block;
     position: relative;
     right: 55%;
@@ -191,6 +255,40 @@
 
 .btn-css{
     position: relative;
-    left: 10%;
+    left: 8%;
+}
+.btn-css-d{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    position: relative;
+    bottom: 2.5rem;
+    left: 7%;
+}
+.PosDistance1AB{
+    margin-left: 8rem;
+    position: relative;
+    left: -15%;
+}
+.PosDistanceAC{
+    margin-left: 8rem;
+    position: relative;
+    left: 15%;
+}
+
+
+.btn-css-dAC{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    position: relative;
+    bottom: 2.5rem;
+    left: 7.5%;
 }
  }
