--- a/scb-frontend/src/components/Logo-Section/LogoSection.css
+++ b/scb-frontend/src/components/Logo-Section/LogoSection.css
@@ -52,9 +52,10 @@
 .Heading{
     margin-top: 3rem;
     position: relative;
-    left: 12rem;
+    left: 11.5rem;
     width: 23rem;
     font-weight: bold;
+    width: 90%;
 }
 
 .DownHeading{
