--- a/scb-frontend/src/components/Committee/IAOMR/iaomr.css
+++ b/scb-frontend/src/components/Committee/IAOMR/iaomr.css
@@ -27,6 +27,11 @@
     position: relative;
     right: 2rem;
 }
+.second-levelC{
+    display: flex;
+    position: relative;
+    left: 10%;
+}
 .Third-Level-2{
     display: flex;
     position: relative;
@@ -118,6 +123,17 @@
     color: white;
     background-color: #149BFC;
 }
+.btn-css-iaomr-2{
+    position: relative;
+    top: 3rem;
+    right: 10rem;
+    width: 18rem;
+    height: 6rem;
+    border-radius: 25px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+}
 
 .PosDistance-iaomrleftcorner{
     position: relative;
@@ -125,6 +141,16 @@
     margin: 3rem 0rem;
 }
 .PosDistance-rightcorner{
+    position: relative;
+    left: 20%;
+    margin: 3rem 0rem;
+}
+.PosDistance-iaomrleftcornerA{
+    position: relative;
+    left:-5%;
+    margin: 3rem 0rem;
+}
+.PosDistance-rightcornerA{
     position: relative;
     left: 20%;
     margin: 3rem 0rem;
@@ -151,4 +177,124 @@
     position: relative;
     left: 3%;
     margin: 3rem 0rem;
+}
+
+.iaomr-para{
+    position: relative;
+    left: 18%;
+    margin:4rem 0rem;
+    color: #149BFC;
+}
+@media screen and (max-width:600px) {
+
+    .btn-css-iaomr-2{
+        position: relative;
+        top: 3rem;
+        right: 6.5rem;
+        width: 18rem;
+        height: 6rem;
+        border-radius: 25px;
+        border: 0px;
+        color: white;
+        background-color: #149BFC;
+    }
+
+    .iaomr-container{
+        position: relative;
+        left: 0rem;
+    }
+    .iaomrlogo{
+        position: relative;
+        right: 13rem;
+    }
+    .iaomr-para{
+        position: relative;
+        right: 13rem;
+        width: 80%;
+    }
+    .second-le{
+        position: relative;
+        right: 0rem;
+    }
+    .second-level{
+        display: block;
+        position: relative;
+        right: -20%;
+        width: 70%;
+    }
+    .second-levelC{
+        display: block;
+        position: relative;
+        right:44rem;
+    }
+    .btn-css-iaomr-1{
+        position: relative;
+        top: 3rem;
+        right: 8rem;
+        width: 16rem;
+        height: 6rem;
+        border-radius: 25px;
+        border: 0px;
+        color: white;
+        background-color: #149BFC;
+    }
+.btn-css-iaomr{
+    position: relative;
+    top: 3rem;
+    right: 6rem;
+    width: 16rem;
+    height: 4rem;
+    border-radius: 25px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+}
+    .PosDistance-iaomrleftcornerA{
+        position: relative;
+    left:13%;
+    margin: 3rem 0rem;width: 70%;
+    }
+    .PosDistance-rightcornerA{
+        position: relative;
+    left:13%;
+    margin: 3rem 0rem; width: 70%;
+    }
+
+    .PosDistance-iaomrleftcorner{
+        position: relative;
+    left:0%;
+    margin: 3rem 0rem; width: 70%;
+    }
+    .PosDistance-iaomr-center{
+        position: relative;
+        left: 0%;
+        margin: 3rem 0rem;
+        width: 70%;
+    }
+    .PosDistance-rightcorner{
+        position: relative;
+        left: 0%;
+        margin: 3rem 0rem; width: 70%;
+    }
+    .PosDistance-rightcorner-1{
+        position: relative;
+        left: 0%;
+        margin: 3rem 0rem; width: 70%;
+    }
+    .PosDistance-rightcorner-2{
+        position: relative;
+        left: 0%;
+        margin: 3rem 0rem; width: 70%;
+    }
+    .PosDistance-iaomr-center-2{
+        position: relative;
+        left: 0%;
+        margin: 3rem 0rem; width: 70%;
+    }
+    .PosDistance-iaomr-center-3{
+        position: relative;
+        left: 0%;
+        margin: 3rem 0rem; width: 70%;
+    }
+    
 }
