--- a/scb-frontend/src/components/Header/Header.css
+++ b/scb-frontend/src/components/Header/Header.css
@@ -44,6 +44,7 @@
 @media screen and (max-width:600px) {
 .swiper{
   width: 110%;
+  overflow-x: hidden;
 }
 .overlayheading{
   position: relative;
