--- a/scb-frontend/src/components/Header/EventDetails/eventdetails.css
+++ b/scb-frontend/src/components/Header/EventDetails/eventdetails.css
@@ -5,11 +5,25 @@
 
   .EventSchedule{
     display: flex;
+
+    position: relative;
+    bottom: 8rem;
   }
-  
+  /* .dividr{
+    width: 25%;
+    }
+    .dividr1{
+        width: 25%;
+        }.dividr2{
+            width: 25%;
+            }.dividr3{
+                width: 25%;
+                } */
 .twologos{
     position: relative;
     left: 45%;
+    bottom: 6rem;
+    margin-bottom: 0rem;
 }
 .elements-main{
     display: flex;
@@ -20,4 +34,32 @@
 
 .para1{
     margin-top: 2.5rem;
+}
+
+@media screen and (max-width:600px) {
+  .twologos{
+    margin-left: -3rem;
+
+  } 
+  .EventSchedule{
+    display: block;
+    position: relative;
+    bottom: 8rem;
+  }
+  
+  .dividr{
+    position: relative;
+    top: 13rem;
+    margin-bottom: 12rem;
+    min-width: 110%;
+    max-height: 3.5rem;
+    }
+    .dividr1{
+        display: none;
+        width: 35%;
+        }.dividr2{            display: none;
+            width: 35%;
+            }.dividr3{            display: none;
+                width: 35%;
+                }
 }
