--- a/scb-frontend/src/components/Header/EventDetails/eventdetails.css
+++ b/scb-frontend/src/components/Header/EventDetails/eventdetails.css
@@ -35,12 +35,41 @@
 .para1{
     margin-top: 2.5rem;
 }
-
+.twologoo{
+  width: 9rem;
+  height:9rem;
+  position: relative;
+  bottom: 5rem;
+  left: 9%;
+}
+.twologoo-1{
+  width: 17rem;
+  height: 15rem;
+  position: relative;
+  bottom: 5rem;
+  left: 45%;
+}
 @media screen and (max-width:600px) {
   .twologos{
-    margin-left: -3rem;
-
+    margin-left: -4rem;
   } 
+
+  .twologoo{
+    width: 9.5rem;
+    height:9rem;
+    position: relative;
+    left: -20%;
+    top: 9rem;
+  }
+  .twologoo-1{
+    width: 18.75rem;
+    height: 15rem;
+    position: relative;
+    bottom: 5rem;
+    left: 45%;
+    width: 60%;
+  }
+
   .EventSchedule{
     display: block;
     position: relative;
