--- a/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
+++ b/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
@@ -48,6 +48,28 @@
     position: relative;
     bottom: 2.5rem;
 }
+.btn-css1As{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    position: relative;
+    bottom: 2.5rem;
+    left: 1rem;
+}
+.btn-css1A{
+    width: 16rem;
+    height: 4rem;
+    border-radius: 15px;
+    border: 0px;
+    color: white;
+    background-color: #149BFC;
+    position: relative;
+    bottom: 2.5rem;
+    left: 1rem;
+}
 .btn-css-d{
     width: 16rem;
     height: 4rem;
@@ -72,7 +94,11 @@
     position: relative;
     right: 2rem;
 }
-
+.second-levelAZ{
+    display: flex;
+    position: relative;
+    right: -1rem;
+}
 .second-level{
     display: flex;
     position: relative;
@@ -103,6 +129,11 @@
 .PosDistance1A{
     margin-left: 8rem;
 }
+
+.PosDistance1AX{
+    margin-left: 8rem;
+}
+
 .PosDistance1AB{
     margin-left: 8rem;
     position: relative;
@@ -212,10 +243,8 @@
     right: 30%;
 }
 .OCHeading12{
-    position: relative;
-    left: 10%;
     margin-top: 5rem;
-    width: 80%;
+    width: 100%;
     color: #149BFC;
 }
 .first-levelA{
@@ -238,7 +267,11 @@
     position: relative;
     right: 30%;
 }
-
+.second-levelAZ{
+    display: block;
+    position: relative;
+    right: 30%;
+}
 .second-levelD{
     display: flex;
     position: relative;
@@ -247,6 +280,12 @@
 
 .PosDistance1A{
     margin-left: 0rem;
+}
+
+.PosDistance1AX{
+    margin-left: 0rem;
+    position: relative;
+    left: 1.5rem;
 }
 .PosDistanceAF{
   margin-left: 0rem;
@@ -265,7 +304,7 @@
 .Third-Level-2A{
     display: block;
     position: relative;
-    right: 55%;
+    right: 48%;
 }
 
 .Third-Level-3A{
@@ -305,6 +344,14 @@
     position: relative;
     left: 8%;
 }
+.btn-css1A{
+    position: relative;
+    left: -6%;
+}
+.btn-css1As{
+    position: relative;
+    left: 5%;
+}
 .btn-css-d{
     width: 16rem;
     height: 4rem;
@@ -324,7 +371,7 @@
 .PosDistanceAC{
     margin-left: 8rem;
     position: relative;
-    left: 15%;
+    left: 5%;
 }
 
 
