--- a/scb-frontend/src/components/Footer/Footer.css
+++ b/scb-frontend/src/components/Footer/Footer.css
@@ -10,6 +10,8 @@
     background-color: #000000;
     color: #fff;
     padding: 20px 0;
+    width: 100vw;
+    position: relative;
   }
 
  li a {
@@ -69,10 +71,18 @@
   @media only screen and (max-width: 600px) {
     .footer-nav{
       display: block;
+    } .footer-logo1{
+      position: relative;
+      bottom: 9%;
+      height: 17rem;
+      width: 20rem;    left: 14%;
     }
 
+
     .footer{
-      width: 110%;
+      width: 110vw;
+      position: relative;
+      top: 1050vh;
     }
     .nav-heading{
   text-align: center;
