--- a/scb-frontend/src/components/Header/AboutSym/AboutSym.css
+++ b/scb-frontend/src/components/Header/AboutSym/AboutSym.css
@@ -12,6 +12,11 @@ width: 25%;
     margin: 2.55rem;
     color:#149BFC ;
 }
+.main-container1{
+    position: absolute;
+    top: 215vh;
+    left: 6vw;
+    margin-bottom: 10vh;}
 
 .about-para{
     font-size: larger;
@@ -19,11 +24,12 @@ width: 25%;
 }
 
 .aboutpicture{
-    margin: 3rem 0rem;
-    height: 20rem;
-    width: 20rem;
+     margin: 3rem 0rem;
+    height: 25rem;
+    width: 25rem;
     position: relative;
-    left: 70%;
+    left: 105%;
+    padding: auto;
 }
 .line-1{
 }
@@ -56,13 +62,22 @@ width: 25%;
                     }
 
     .main-container1{
-height: 40rem;
+height: 40vh;
+margin: 10vh 0vh;
+    }
+
+    .container2{
+        display: block;
+        position: absolute;
+        top: 280vh;
     }
     .aboutpicture{
-        position: relative;
-        top: 0rem;
-    left: 18%;
-        margin-bottom: 10rem;
+        padding: 3vw;
+        position: absolute;
+        top: 351vh;
+
+        left: 12vw;
+        margin-bottom: 14vh;
     }
     .divider{
      margin-top: 25rem;
@@ -71,13 +86,18 @@ height: 40rem;
     }
     .about-head{
         margin: 2.55rem;
-        color:#149BFC ;
-        position: relative;
-        left: 00%;
-  
+        color: #149BFC;
+        position: absolute;
+        top: -6vh;
+        left: 9vw;
+    
     }
     .about-para{
+    
         font-size: larger;
-       width: 100%;
+        width: 85vw;
+        position: absolute;
+        left: 8vw;
+        top: 13vh;
     }
 }
