--- a/scb-frontend/src/components/Nav-Bar/navbar.css
+++ b/scb-frontend/src/components/Nav-Bar/navbar.css
@@ -1,17 +1,24 @@
-
-   
-.position-fix{
+.position-fix {
     position: relative;
-    left: 18rem;
+    left: 10vw; /* Adjusted to vw */
 }
 
-@media screen and (max-width:600px) {
-    .position-fix{
+.hover {
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+}
+
+.hover:hover {
+    color: orange;
+}
+
+@media screen and (max-width: 600px) {
+    .position-fix {
         position: relative;
-        left: 0rem;
+        left: 0vw; /* Adjusted to vw */
     }
 
-    .nav{
-        width: 110%;
+    .nav {
+        width: 110vw; /* Adjusted to vw */
     }
 }
