--- a/scb-frontend/src/components/Committee/IAOMR/iaomr.css
+++ b/scb-frontend/src/components/Committee/IAOMR/iaomr.css
@@ -81,7 +81,6 @@
 .iaomr-container{
     position: relative;
     left: 18rem;
-    bottom: 0vh;
 }
 .PhotoPos-3{
     position: relative;
@@ -196,15 +195,13 @@
     margin:4rem 0rem;
     color: #149BFC;
 }
-
-
 @media screen and (max-width:600px) {
 
-/* .MainContainer{
+.MainContainer{
     width: 70%;
     position: relative;
 left: 5%;
-} */
+}
 
     .dividra{
 display: none;
