--- a/scb-frontend/src/components/Header/Header.css
+++ b/scb-frontend/src/components/Header/Header.css
@@ -22,56 +22,41 @@
     object-fit: cover;
   }
   
-  .HeadImgSize {
-    height: 35vw; /* Adjusted to vw */
+  .HeadImgSize{
+    height: 35rem;
     width: 100%;
     object-fit: cover;
-}
-
-.overlayheading {
-    position: absolute;
-    bottom: 25vh; /* Adjusted to vh */
-    left: 28vw; /* Adjusted to vw */
-    color: #ffffff;
-    font-size: 2.5vw;
-    width: 100vw; /* Adjusted to vw */
-    z-index: 100;
-}
-
-.overlayheading2 {
-    position: absolute;
-    bottom: 15vh; /* Adjusted to vh */
-    left: 42vw; /* Adjusted to vw */
+  }
+  .overlayheading{
+    position: relative;
+    bottom: 28rem;
+    left: 28%;
     color: #ffffff;
     z-index: 100;
-    font-size: 2.5vw;
-    margin-top: 2vh;
-    width: 40vw; /* Adjusted to vw */
-}
-
+  }
+  .overlayheading2{
+    position: relative;
+    bottom: 18rem;
+    left: 42%;
+    color: #ffffff;
+    z-index: 100;
+  }
 @media screen and (max-width:600px) {
 .swiper{
   width: 110%;
   overflow-x: hidden;
 }
-
-.HeadImgSize {
-  height: 125vw; /* Adjusted to vw */
-  width: 100%;
-  object-fit: cover;
-}
 .overlayheading{
   position: relative;
   bottom: 20rem;
   left: 30%;
-  color: #ffffff; font-size: 5.5vw;
+  color: #ffffff;
   z-index: 100;
   width: 60%;
 }
 .overlayheading2{
   position: relative;
   bottom: 18rem;
-  font-size: 5.5vw;
   left: 32%;
   color: #ffffff;
   z-index: 100;  width: 60%;
