--- a/scb-frontend/src/components/Header/AboutSym/AboutSym.css
+++ b/scb-frontend/src/components/Header/AboutSym/AboutSym.css
@@ -12,11 +12,6 @@ width: 25%;
     margin: 2.55rem;
     color:#149BFC ;
 }
-.main-container1{
-    position: absolute;
-    top: 215vh;
-    left: 6vw;
-    margin-bottom: 10vh;}
 
 .about-para{
     font-size: larger;
@@ -24,12 +19,11 @@ width: 25%;
 }
 
 .aboutpicture{
-     margin: 3rem 0rem;
-    height: 25rem;
-    width: 25rem;
+    margin: 3rem 0rem;
+    height: 20rem;
+    width: 20rem;
     position: relative;
-    left: 105%;
-    padding: auto;
+    left: 70%;
 }
 .line-1{
 }
@@ -62,22 +56,13 @@ width: 25%;
                     }
 
     .main-container1{
-height: 40vh;
-margin: 10vh 0vh;
-    }
-
-    .container2{
-        display: block;
-        position: absolute;
-        top: 280vh;
+height: 40rem;
     }
     .aboutpicture{
-        padding: 3vw;
-        position: absolute;
-        top: 351vh;
-
-        left: 12vw;
-        margin-bottom: 14vh;
+        position: relative;
+        top: 0rem;
+    left: 18%;
+        margin-bottom: 10rem;
     }
     .divider{
      margin-top: 25rem;
@@ -86,18 +71,13 @@ margin: 10vh 0vh;
     }
     .about-head{
         margin: 2.55rem;
-        color: #149BFC;
-        position: absolute;
-        top: -6vh;
-        left: 9vw;
-    
+        color:#149BFC ;
+        position: relative;
+        left: 00%;
+  
     }
     .about-para{
-    
         font-size: larger;
-        width: 85vw;
-        position: absolute;
-        left: 8vw;
-        top: 13vh;
+       width: 100%;
     }
 }
