--- a/scb-frontend/src/components/Header/EventDetails/eventdetails.css
+++ b/scb-frontend/src/components/Header/EventDetails/eventdetails.css
@@ -5,114 +5,77 @@
 
   .EventSchedule{
     display: flex;
-    position: absolute;
-    /* margin-bottom: 10vh; */
-    right: 7vw;
-    top: 153vh;
-  }
 
-                .container1{
-                  position: absolute;
-                  
-                }
+    position: relative;
+    bottom: 8rem;
+  }
+  /* .dividr{
+    width: 25%;
+    }
+    .dividr1{
+        width: 25%;
+        }.dividr2{
+            width: 25%;
+            }.dividr3{
+                width: 25%;
+                } */
 .twologos{
-  position: relative;
-  left: 45vw;
-  bottom: -58vh;
-  margin-bottom: 0rem;
+    position: relative;
+    left: 45%;
+    bottom: 6rem;
+    margin-bottom: 0rem;
 }
 .elements-main{
     display: flex;
     position: relative;
     left: 05%;
-    margin: 3vh 3vw;
+    margin: 3rem 3rem;
 }
 
 .para1{
     margin-top: 2.5rem;
 }
 .twologoo{
-  width: 8vw;
-  height: 15vh;
+  width: 9rem;
+  height:9rem;
   position: relative;
-  bottom: -38vh;
-  left: 27vw;
+  bottom: 5rem;
+  left: 9%;
 }
 .twologoo-1{
-  width: 16vw;
-  height:30vh;
+  width: 17rem;
+  height: 15rem;
   position: relative;
-  bottom: -3vh;
+  bottom: 5rem;
   left: 45%;
 }
 @media screen and (max-width:600px) {
   .twologos{
-    margin-left: -2rem;
-    position: absolute;
-    left: 32vw;
-    bottom: -29vh;
-    margin-bottom: 0rem;
+    margin-left: -4rem;
   } 
 
-  .divider{
-    height: 3.14vh;
-    width: 50.9vh;
-    position: relative;
-    top: 5vh;
-  }.dividerAB{    height: 3.14vh;
-    width: 50.9vh;
-    position: relative;
-    top: 210vh;
-  }
-  .dividerA{
-    height: 3.14vh;
-        width: 50.9vh;
-        position: relative;
-        top: 70vh;
-  }
-  .divider1{
-    display: none;
-  }
-  .divider2{
-    display: none;
-  }
-  .divider3{
-    display: none;
-  }
-.para1{
-  width: 39vw;
-}
   .twologoo{
-    width: 30vw;
-    height: 14vh;
-    position: absolute;
-    bottom: -43.3vh;
-    left: 20vw;
-
+    width: 9.5rem;
+    height:9rem;
+    position: relative;
+    left: -20%;
+    top: 9rem;
   }
   .twologoo-1{
-    height: 25vh;
-    position: absolute;
-    top: 24vh;
-    left: 36vw;
-    margin-left: 0.1vw;
-    width: 58vw;
+    width: 18.75rem;
+    height: 15rem;
+    position: relative;
+    bottom: 5rem;
+    left: 45%;
+    width: 60%;
+  }
 
-}
-  
-.container1{
-  position: absolute;
-}
   .EventSchedule{
     display: block;
     position: relative;
-    bottom: 4vh;
-    left: 4vw;
-    width: 80%;
+    bottom: 8rem;
   }
-  h6 {
-    font-size: 4vw;
-}
+  
   .dividr{
     position: relative;
     top: 13rem;
@@ -121,6 +84,7 @@
     max-height: 3.5rem;
     }
     .dividr1{
+        display: none;
         width: 35%;
         }.dividr2{            display: none;
             width: 35%;
