--- a/scb-frontend/src/components/Header/PlacesToExplore/PlacesToExplore.css
+++ b/scb-frontend/src/components/Header/PlacesToExplore/PlacesToExplore.css
@@ -1,93 +1,69 @@
-.Heading-1 {
+.Heading-1{
     position: relative;
-    left: 35vw;
-    bottom: 51vh;
-    margin-top: 10vw;
+    left: 45%;
+margin-top: 5rem;
     color: #149BFC;
 }
 
-.Heading-para {
+.Heading-para{
     position: relative;
-    top: -45vh;
-    left: -20%;
+    top: 2rem;
+    left: 5%;
     text-align: center;
 }
 
-.placesCard {
+.placesCard{
     display: flex;
-    position: relative;
-    bottom: 60vh;
+
 }
-.main-container{
-    position: absolute;
-    top: 391vh;
-}
-.divider {
-    height: 1vw; /* Adjusted to vw */
-    width: 25vw; /* Adjusted to vw */
-    position: relative;
-    top: 5vh;
+.divider{
+    height:1rem;
+    width: 25%;
 }
 
-.cardimg {
+.cardimg{
     border-radius: 15px;
-    width: 30.5vw; /* Adjusted to vw */
-    height: 21vw; /* Adjusted to vw */
-    margin-left: 2.2vw; /* Adjusted to vw */
-    margin-bottom: 1vw; /* Adjusted to vw */
+    width: 29rem;
+    height: 21rem;
+    margin-left: 2.2rem;
+    margin-bottom: 1rem;
 }
 
-.Cardimg {
-    margin-top: 12vw; /* Adjusted to vw */
-    width: 60%;
+.Cardimg{
+    margin-top: 12rem;
 }
+
 
 @media screen and (max-width:600px) {
-    .placesCard {
-        display: block;
-        position: relative;
-        left: 16vw;
-        margin-bottom: 32vh;
-        top: 218vh;
-    }
+   .placesCard
+   {
+    display: block;
+    position: relative;
+    left: 5%;
+   }
 
-    .Heading-para {
-        text-align: center;
-        position: absolute;
-        margin-left: 4vw;
-        margin-bottom: 10vh;
-        width: 77vw;
-        top: 7vh;
-        left: 8vw;
-    }
+   .Heading-para{
+    text-align: center;
+    margin-left: 7rem;
+   }
+   .cardimg{
+    border-radius: 15px;
+    width: 20rem;
+    height: 16rem;
+    margin-left: 7rem;
+    margin-bottom: 1rem;
 
-    .cardimg {
-        border-radius: 15px;
-        width: 79vw;
-        height: 63vw;
-        margin-left: 7vw;
-        margin-bottom: -11vw;
-        margin-top: 7vh;
-    }
+}
 
-    .main-container {
-        position: absolute;
-        left: -3vw;
-        top: 402vh;
-    }.dividerAD{
-        height: 3.14vh;
-        width: 51.2vh;
-        position: relative;
-        top: 210vh;
-        left: 3vw;
-    
-    }
+.main-container{
+    position: relative;
+    left: -4rem;
+}
+.Heading-1{
+   width:60%;
+   margin-top: 15rem;
+   position: relative;
+   right: 40rem;
+}
 
-    .Heading-1 {
-        width: 60vw;
-        margin-top: 15vw;
-        position: absolute;
-        top: -8vh;
-        left: 22vw;
-    }
 }
