--- a/scb-frontend/src/components/Nav-Bar/navbar.css
+++ b/scb-frontend/src/components/Nav-Bar/navbar.css
@@ -1,24 +1,17 @@
-.position-fix {
+
+   
+.position-fix{
     position: relative;
-    left: 10vw; /* Adjusted to vw */
+    left: 18rem;
 }
 
-.hover {
-    text-decoration: none;
-    transition: all 0.2s ease-in-out;
-}
-
-.hover:hover {
-    color: orange;
-}
-
-@media screen and (max-width: 600px) {
-    .position-fix {
+@media screen and (max-width:600px) {
+    .position-fix{
         position: relative;
-        left: 0vw; /* Adjusted to vw */
+        left: 0rem;
     }
 
-    .nav {
-        width: 110vw; /* Adjusted to vw */
+    .nav{
+        width: 110%;
     }
 }
