--- a/scb-frontend/src/components/Committee/IAOMP/iaomp.css
+++ b/scb-frontend/src/components/Committee/IAOMP/iaomp.css
@@ -53,12 +53,7 @@
     position: relative;
     right: 6rem;
 }
-.PhotoPos-2{
-    position: relative;
-    left: 60.5%;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-}
+
 .PosDistance-4{
    margin-left: 4rem;
 }
@@ -78,7 +73,12 @@
     left: 27%;
 margin-top: 4rem;
 }
-
+.PhotoPos-2N{
+    position: relative;
+    left: 56.5%;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+}
 
 @media screen and (max-width:600px) {
     .iaomp-container{
