--- a/scb-frontend/src/components/Committee/IAOMR/iaomr.css
+++ b/scb-frontend/src/components/Committee/IAOMR/iaomr.css
@@ -39,7 +39,7 @@
 .second-level{
     display: flex;
     position: relative;
-    right: 2rem;
+    right: 5rem;
 }
 .second-levelC{
     display: flex;
@@ -62,12 +62,7 @@
     position: relative;
     right: 6rem;
 }
-.PhotoPos-2{
-    position: relative;
-    left: 60.5%;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-}
+
 .PosDistance-4{
    margin-left: 8rem;
 }
@@ -81,6 +76,10 @@
 .iaomr-container{
     position: relative;
     left: 18rem;
+}
+.containn{
+    position: relative;
+    right: 3rem;
 }
 .PhotoPos-3{
     position: relative;
@@ -173,8 +172,13 @@
 }
 .PosDistance-iaomr-center-3{
     position: relative;
-    left: 29%;
+    left: 130%;
     margin: 3rem 0rem;
+}
+.second-levelB{
+    display: flex;
+    position: relative;
+    right: 10rem;
 }
 .PosDistance-iaomr-center-2{
     position: relative;
@@ -196,6 +200,10 @@
     color: #149BFC;
 }
 @media screen and (max-width:600px) {
+.containn{
+    position: relative;
+    right: 2rem;
+}
 
 .MainContainer{
     width: 70%;
@@ -249,6 +257,14 @@ display: none;
         right: -20%;
         width: 70%;
     }
+    .second-levelB{
+    
+            display: block;
+            position: relative;
+            right: -20%;
+            width: 70%;
+        
+    }
     .second-levelC{
         display: block;
         position: relative;
@@ -269,7 +285,7 @@ display: none;
     position: relative;
     top: 3rem;
     right: 5rem;
-    width: 16rem;
+    width: 18rem;
     height: 4rem;
     border-radius: 25px;
     border: 0px;
@@ -324,4 +340,11 @@ display: none;
         margin: 3rem 0rem; width: 70%;
     }
     
+}
+
+@media screen and (min-width:1024px) and (max-width:1280px) {
+    .iaomr-container {
+        position: relative;
+        left: 15rem;
+    }
 }
