--- a/scb-frontend/src/components/Header/AboutSym/AboutSym.css
+++ b/scb-frontend/src/components/Header/AboutSym/AboutSym.css
@@ -79,5 +79,7 @@ height: 40rem;
     .about-para{
         font-size: larger;
        width: 100%;
+       position: relative;
+    left: -0.2rem;
     }
 }
