--- a/scb-frontend/src/components/Header/EventDetails/eventdetails.css
+++ b/scb-frontend/src/components/Header/EventDetails/eventdetails.css
@@ -19,12 +19,12 @@
             }.dividr3{
                 width: 25%;
                 } */
-.twologos{
+/* .twologos{
     position: relative;
     left: 45%;
     bottom: 6rem;
     margin-bottom: 0rem;
-}
+} */
 .elements-main{
     display: flex;
     position: relative;
@@ -35,7 +35,7 @@
 .para1{
     margin-top: 2.5rem;
 }
-.twologoo{
+/* .twologoo{
   width: 9rem;
   height:9rem;
   position: relative;
@@ -48,33 +48,40 @@
   position: relative;
   bottom: 5rem;
   left: 45%;
-}
+} */
 @media screen and (max-width:600px) {
-  .twologos{
-    margin-left: -4rem;
-  } 
+  
+.para1{
+  width: 100%;
+}
+.twologoo {
+  width: 6.5rem;
+  height: 6.5rem;
+  position: relative;
+  left: -6%;
+  top: 0.5rem;
+}
+.twologos {
+  margin-left: -4rem;
+  position: relative;
+  left: 18rem;
+}
+.twologoo-1 {
+  width: 15.75rem;
+  height: 10rem;
+  position: relative;
+  bottom: -0.5rem;
+  left: -65%;
+  width: 40%;
+}
 
-  .twologoo{
-    width: 9.5rem;
-    height:9rem;
-    position: relative;
-    left: -20%;
-    top: 9rem;
-  }
-  .twologoo-1{
-    width: 18.75rem;
-    height: 15rem;
-    position: relative;
-    bottom: 5rem;
-    left: 45%;
-    width: 60%;
-  }
-
-  .EventSchedule{
+  
+  .EventSchedule {
     display: block;
     position: relative;
     bottom: 8rem;
-  }
+    left: -2rem;
+}
   
   .dividr{
     position: relative;
@@ -91,4 +98,65 @@
             }.dividr3{            display: none;
                 width: 35%;
                 }
+}
+
+@media screen and (min-width:1025px) and (max-width:1280px) {
+  .twologos{
+    position: relative;
+    left: 44rem;
+  }
+.twologoo-1{
+  height: 11rem;
+  width: 12.5rem;
+  position: relative;
+  left: 7rem;
+  top: 0.51rem;
+}
+  .twologoo{
+    height: 7rem;
+    width: 7rem;
+    position: relative;
+    left: 2rem;
+    top: 0.45rem;}
+}
+@media screen and (min-width:1400px) {
+  .twologoo {
+    height: 6.5rem;
+    width: 6.5rem;
+    position: relative;
+    top: 0.51rem;
+    left: 29rem;
+}
+.twologos{
+  position: relative;
+  left: 48.4rem;
+}
+.twologoo-1{
+  height: 11rem;
+  width: 12.5rem;
+  position: relative;
+  top: 0.51rem;
+  left: 13rem;
+}
+}
+
+@media screen and (min-width: 1281px) and (max-width:1399px) {
+  .twologoo {
+    height: 6.5rem;
+    width: 6.5rem;
+    position: relative;
+    top: 0.51rem;
+    left: 26rem;
+}
+.twologos{
+  position: relative;
+  left: 45.4rem;
+}
+.twologoo-1{
+  height: 11rem;
+  width: 12.5rem;
+  position: relative;
+  top: 0.51rem;
+  left: 10rem;
+}
 }
