--- a/scb-frontend/src/components/Logo-Section/LogoSection.css
+++ b/scb-frontend/src/components/Logo-Section/LogoSection.css
@@ -34,7 +34,7 @@
    .HeadingMain{
     position: relative;
     top: 0rem;
-    left: -9rem;
+    left: -2rem;
     width: 100%;
    }
 .container{
@@ -46,32 +46,93 @@
 .logoSCB{
     height: 17rem;
     width: 20rem;
-    margin-left: .5rem;
+    margin-left: 0.5rem;
+    left: 0rem;
+    position: relative;
 }
 
 .Heading{
-    margin-top: 3rem;
+    margin-top: 5rem;
     position: relative;
-    left: 11.5rem;
-    width: 23rem;
-    font-weight: bold;
-    width: 90%;
+    left: 7rem;
+    color: #149BFC;
+    width: 15rem;
 }
 
 .DownHeading{
     font-size: 1rem;
     position: relative;
-    left: 11rem;
+    left: 7rem;
     top: 1rem;
     width: 60%;
 }
 
-.logoIAOMR{
-    height:19rem;
-    width: 20rem;
-    margin-left: 1rem;
+.logoIAOMR {
+    height: 19rem;
+    width: 22rem;
+    margin-left: 0rem;
     position: relative;
-    right: 18rem;
+    right: 15rem;
 }
 
+}
+@media screen and (min-width:601px) and (max-width:1024px) {
+   
+    .DownHeading {
+        font-size: 1rem;
+        position: relative;
+        left: 5rem;
+        color: #149BFC;
+    }
+    .logoIAOMR {
+        height: 18rem;
+        width: 22rem;
+        position: relative;
+        left: 3rem;
+    }
+}
+
+@media screen and (min-width:1025px) and   (max-width:1280px) {
+    .DownHeading {
+        font-size: 1rem;
+        position: relative;
+        left: 5rem;
+        color: #149BFC;
+    }
+    .Heading {
+        margin-top: 5rem;
+        position: relative;
+        left: 2rem;
+        color: #149BFC;
+        width: 37rem;
+    }
+    .logoIAOMR {
+        height: 17rem;
+        width: 20rem;
+        position: relative;
+        left: 1rem;
+    }
+}
+
+@media screen and (min-width:1281px) and  (max-width:1399px) {
+
+        .logoIAOMR {
+            height: 17rem;
+            width: 20rem;
+            position: relative;
+            left: 1rem;
+        }
+        .Heading {
+            margin-top: 5rem;
+            position: relative;
+            left: 1rem;
+            color: #149BFC;
+            width: 37rem;
+        }
+        .DownHeading {
+            font-size: 1rem;
+            position: relative;
+            left: 11rem;
+            color: #149BFC;
+        }
 }
