--- a/scb-frontend/src/components/Nav-Bar/navbar.css
+++ b/scb-frontend/src/components/Nav-Bar/navbar.css
@@ -15,3 +15,17 @@
         width: 110%;
     }
 }
+
+@media screen and (min-width:1025px) and (max-width:1280px) {
+    .position-fix {
+        position: relative;
+        left: 14rem;
+    }
+}
+
+@media screen and (min-width:601px) and (max-width:1024px) {
+    .position-fix {
+        position: relative;
+        left: 4rem;
+    }
+}
