--- a/scb-frontend/src/components/Committee/IAOMR/iaomr.css
+++ b/scb-frontend/src/components/Committee/IAOMR/iaomr.css
@@ -186,6 +186,10 @@
     margin-right: 1rem;
     margin: 3rem 0rem;
 }
+.second-l{
+    position: relative;
+    left: 6rem;
+}
 
 .PosDistance-rightcorner-1{
     position: relative;
@@ -244,8 +248,13 @@ display: none;
     }
     .iaomr-para{
         position: relative;
-        right: 13rem;
-        width: 80%;
+        left: 0.8rem;
+        width: 132%;
+        font-size: 2rem;
+    }
+    .second-l{
+        position: relative;
+        left: -2rem;
     }
     .second-le{
         position: relative;
