--- a/scb-frontend/src/components/Registration/reg.css
+++ b/scb-frontend/src/components/Registration/reg.css
@@ -27,7 +27,9 @@ tr:hover {
   background-color: #f5f5f5;
 }
 
-
+.guidelines-container{
+  background-color: #fff;
+}
 
 
 /* ... Existing styles for AccountDetailsCard ... */
