--- a/scb-frontend/src/components/Registration/reg.css
+++ b/scb-frontend/src/components/Registration/reg.css
@@ -47,6 +47,7 @@ left: 10%;
   height: 25rem;
   background-color: #fff; /* White background */
   margin-left: 20px; /* Adjust spacing as needed */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .qr-code-card img {
