--- a/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
+++ b/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
@@ -299,6 +299,8 @@
     margin-top: 5rem;
     width: 100%;
     color: #149BFC;
+    position: relative;
+    right: -3rem;
 }
 .first-levelA{
     position: relative;
