--- a/scb-frontend/src/components/Committee/OOOExecutiveAdvisors/ooex.css
+++ b/scb-frontend/src/components/Committee/OOOExecutiveAdvisors/ooex.css
@@ -32,6 +32,12 @@
     color: #149BFC;
     
 }
+
+.containnn{
+    position: relative;
+    right: -09rem;
+}
+
 .Box{
     position: relative;
     margin-right: 1rem;
@@ -39,6 +45,10 @@
     margin-bottom: 5rem;
 }
 @media screen  and (max-width:600px) {
+    .containnn{
+        position: relative;
+        right: 2rem;
+    }
     .headingooo {
         position: relative;
         left: 2rem;
