--- a/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
+++ b/scb-frontend/src/components/Header/OrganisingCommittee/oc.css
@@ -20,6 +20,9 @@
     margin-top: 5rem;
     color: #149BFC;
 }
+.MainContainerB{
+    width: auto;
+}
 .OCHeading12{
     position: relative;
     left: 37%;
