--- a/scb-frontend/src/components/Committee/StudentCommittee/core.css
+++ b/scb-frontend/src/components/Committee/StudentCommittee/core.css
@@ -43,3 +43,11 @@
         background-color: #149BFC;
     }
 }
+
+@media screen and (min-width:1400px) {
+    .core{
+        position: relative;
+        left: 20rem;
+    }
+}
+
