--- a/scb-frontend/src/components/Header/EventDetails/eventdetails.css
+++ b/scb-frontend/src/components/Header/EventDetails/eventdetails.css
@@ -99,23 +99,29 @@
                 }
 }
 
-@media screen and (min-width:1025px) and (max-width:1280px) {
+@media screen and (min-width:1024px) and (max-width:1280px) {
   .twologos{
     position: relative;
-    left: 44rem;
+    left: 42rem;
   }
+
+.EventSchedule{
+  position: relative;
+  left: -2rem;
+}
+
 .twologoo-1{
   height: 11rem;
   width: 12.5rem;
   position: relative;
-  left: 7rem;
+  left: 12.5rem;
   top: 0.51rem;
 }
   .twologoo{
     height: 7rem;
     width: 7rem;
     position: relative;
-    left: 2rem;
+    left: 15.3rem;
     top: 0.45rem;}
 }
 @media screen and (min-width:1400px) {
