--- a/scb-frontend/src/components/Header/PlacesToExplore/PlacesToExplore.css
+++ b/scb-frontend/src/components/Header/PlacesToExplore/PlacesToExplore.css
@@ -48,7 +48,7 @@ margin-top: 5rem;
     }
     .cardimg{
         border-radius: 15px;
-        width: 28rem;
+        width: 29rem;
         height: 21rem;
         margin-left: 2.2rem;
         margin-bottom: 1rem;
@@ -100,10 +100,23 @@ margin-top: 5rem;
 @media screen and (min-width:1025px) and (max-width:1280px) {
     .Heading-1{
         position: relative;
-    left: 42%;
+    left: 39%;
     margin-top: 5rem;
     color: #149BFC;
     width: 60%;
     }
-   
+   .Heading-para{
+    position: relative;
+    left: 0%;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
+    text-align: center;
+   }
+   .placesCard{
+    position: relative;
+    right: 1rem;
+   }
+   .cardimg{
+    width: 23.3rem;
+   }
 }
